<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="empty_fields">Please fill all the fields!</string>
    <string name="check_email">Check your email!</string>
    <string name="excellent_skills">Vous avez d\'excellents skills!</string>
    <string name="excellent_skill">Vous êtes excellent en %1$s!</string>
    <string name="below_average_skills">Vous devez travailler vos skills!</string>
    <string name="good_skills">Vous avez de bons skills!</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="fullname">FullName</string>
    <string name="name">Name</string>
    <string name="flutter">Flutter</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="skills">SKILLS</string>
    <string name="femme">Female</string>
    <string name="homme">Male</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="must_not_be_empty">Must not be empty !</string>
    <string name="languages">Languages</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="games">Games</string>
    <string name="submit">Submit</string>
    <string name="career">My career</string>
    <string name="create_resume_title">Create your Resume</string>
    <string name="your_resume_title">Your Resume</string>
    <string name="my_name">Hello! My name is %1$s</string>
    <string name="my_age">I have %1$s years old</string>
    <string name="my_gender">and I am a %1$s</string>
    <string name="my_email">You can contact me via my email:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>