<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background_border"
    tools:context=".LanguagesFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/languages"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arabic"
            android:enabled="false"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>
        <CheckBox
            android:id="@+id/cb_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/french"
            android:enabled="false"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>
        <CheckBox
            android:id="@+id/cb_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english"
            android:enabled="false"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>