<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SkillsActivity">
    <!--SKILLS LAYOUT-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@drawable/background_border"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <!--ANDROID LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_android"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/android"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--iOS LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ios"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ios"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_ios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--FLUTTER LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_flutter"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/flutter"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_flutter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--****************************************-->
    <!--LANGUAGES LAYOUT-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:background="@drawable/background_border"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arabic"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
            <CheckBox
                android:id="@+id/cb_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/french"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
            <CheckBox
                android:id="@+id/cb_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/english"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--****************************************-->
    <!--HOBBIES LAYOUT-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:background="@drawable/background_border"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/music"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
            <CheckBox
                android:id="@+id/cb_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
            <CheckBox
                android:id="@+id/cb_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/games"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <!--****************************************-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <!-- "SUBMIT" BTN -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/rounded_bg"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>