<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- PICTURE -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_pic"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account"/>

    <!-- NAME LAYOUT -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:boxStrokeErrorColor="@color/red"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/h4"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/fullname"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- EMAIL LAYOUT -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:boxStrokeErrorColor="@color/red"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/h4"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- AGE LAYOUT -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_age"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:boxStrokeErrorColor="@color/red"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/h4"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:startIconDrawable="@drawable/ic_calendar"
        app:startIconTint="@color/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--GENDER LAYOUT-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@drawable/background_border"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:text="@string/homme"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:text="@string/femme"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>

        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>



    <!-- "NEXT" BTN -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/rounded_bg"/>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>