<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background_border"
    tools:context=".SkillsFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/skills"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <!--ANDROID LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_android"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/android"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@android:color/darker_gray"
                android:progressTint="@android:color/darker_gray"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--iOS LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ios"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ios"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_ios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@android:color/darker_gray"
                android:progressTint="@android:color/darker_gray"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--FLUTTER LAYOUT-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_flutter"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/flutter"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_flutter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@android:color/darker_gray"
                android:progressTint="@android:color/darker_gray"
                android:max="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>