<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResumeActivityV2">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pic"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account"/>
        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:text="Android"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="android@esprit.tn"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginEnd="3dp"
                android:layout_gravity="bottom"
                android:text="@string/skills"
                android:textColor="@color/white"
                android:background="@drawable/rounded_bg"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_hbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="bottom"
                android:text="@string/hobbies"
                android:textColor="@color/white"
                android:background="@drawable/rounded_bg"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_langs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginStart="3dp"
                android:layout_gravity="bottom"
                android:text="@string/languages"
                android:textColor="@color/white"
                android:background="@drawable/rounded_bg"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/background_border">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"/>
        </FrameLayout>
</androidx.appcompat.widget.LinearLayoutCompat>